--- a/css/styles-admin.css
+++ b/css/styles-admin.css
@@ -30,73 +30,22 @@
 #sidebar {
   flex: 1 1 25%;
 }
-
-#currYear {
-  flex: 1 0 auto;
+#currentSlideDiv, #allSlidesDiv{
+  min-height:800px;
 }
-
-#currPhase {
-  flex: 2 0 auto;
+.nextSlide{
+  width: 360px;
+  height: 200px;
 }
-
-#currPhaseText {
-  flex: 4 0 auto;
-}
-table.content-table{
-  min-width: 100%;
-}
-#novaHra, #oldGame{
-	padding:10px;
-}
-#gameTables{
-	padding: 20px;
-}
-#phasesOpt .optHorizontalBox .title{
-  min-width: 25%;
-}
-.optHorizontalBox{
-  width:100%;
-}
-.optHorizontalBox .title{
-  font-weight: bold;
-}
-x-label{
-  padding-right:5px;
-}
-.tableHeader x-label{
-  min-width: 33%;
-  text-align: right;
+.slidesPreview{
+overflow: hidden;
+position: relative;
 }
 .content-table{
   padding: 15px;
 }
-.sortinput{
-	width: 30px;
-}
 .danger{
 	background-color: #ff8a65;
-}
-th.quest-box, th.points-box{
-	display:none;
-}
-.started .tools{
-	display:none;
-}
-#admin-table td{
-	vertical-align: middle;
-}
-.year-variable{
-	display:inline-block;
-	min-width: 25px;
-	font-weight: bold;
-	text-align:center;
-
-}
-.news{
-  padding: 15px;
-}
-.news h4{
-  margin: 0 0 5px 0;
 }
 x-dialog h4, x-dialog p{
   text-align: center;
