This is just a transfer of current state. Possibly breaks things.

--- a/css/styles-admin.css
+++ b/css/styles-admin.css
@@ -88,3 +88,15 @@ x-dialog x-buttons {
 x-dialog {
   padding: 20px;
 }
+
+#impress-control-buttons {
+  display: none;
+}
+
+.running #impress-control-buttons {
+  display: block;
+}
+
+.running #openFile {
+  display: none;
+}
