--- a/css/styles-admin.css
+++ b/css/styles-admin.css
@@ -54,6 +54,16 @@ body{
   bottom: 0;
 }
 
+#drivePage {
+  width: 100%;
+  display: flex;
+  height: 600px;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+}
+
 .nextSlide {
   min-height: 240px;
   min-width: 320px;
