--- a/css/styles-projector.css
+++ b/css/styles-projector.css
@@ -21,7 +21,7 @@
   padding: 0;
 }*/
 
-html {
+body {
   height: 100%;
   left: 0;
   position: absolute;
@@ -29,9 +29,9 @@ html {
   width: 100%;
 }
 #impressCurrent {
-  width: 100%;
+  width: 100vw;
   display: flex;
-  height: 100%;
+  height: 100vh;
   position: absolute;
   top: 0;
   left: 0;
