--- a/css/styles-projector.css
+++ b/css/styles-projector.css
@@ -38,3 +38,11 @@ body {
   right: 0;
   bottom: 0;
 }
+
+.impressCurtain{
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+}
