--- a/examples/turban-s4xe3/style.css
+++ b/examples/turban-s4xe3/style.css
@@ -14,8 +14,7 @@ body{
   /*top: 0px;
   left: 0px;
   right: 0px;
-  bottom: 0px;*/
-  /*
+  bottom: 0px;
   min-width: 75vw;
   max-width: 100vw;
   width: auto;
