--- a/css/styles-controller.css
+++ b/css/styles-controller.css
@@ -77,6 +77,7 @@ body {
   display: flex;
   align-items: center;
   flex-flow: row nowrap;
+  justify-content: space-between;
 }
 
 #footer {
@@ -348,7 +349,7 @@ body {
   cursor: pointer;
 }
 
-.hidden {
+#container .hidden {
   display: none;
 }
 
@@ -398,6 +399,7 @@ body {
 
 #exitDialog {
   background-color: var(--dialogColor);
+  border: none;
   color: var(--backgroundColor);
   padding: 20px;
 }
